--- a/Estilos/main.css
+++ b/Estilos/main.css
@@ -1,93 +1,158 @@
-button {
-  background-color: purple;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: block;
-  margin: 10px auto;
+*{
+  margin: 0;
 }
-
-button:hover {
-  background-color: darkpurple;
-}
-
-table {
-  margin: 20px auto;
-  width: 50%;
-}
-
-td {
-  padding: 10px;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.titulo {
-  font-size: 40px;
-  background-color: purple;
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.imagenLogo {
-  margin-left: 20px;
-  max-width: 100px; /* Establece el ancho máximo deseado */
-  max-height: 700px; /* Establece la altura máxima deseada */
-}
-
 
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
+  font-family: "Lato", sans-serif;
 }
 
-.panel {
-  background-color: #fff;
-  width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+.sidebar {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.menu {
-  list-style: none;
-  padding: 0;
-  margin-bottom: 20px;
-}
-
-.menu li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.menu li a {
+.sidebar a {
+  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  padding: 10px;
-  background-color: #4caf50;
+  font-size: 18px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+  margin-left: 8px;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
   color: white;
-  border-radius: 5px;
+  padding: 10px 15px;
+  border: none;
+  height: 100%;
 }
 
-.menu li a:hover {
-  background-color: #45a049;
+.openbtn:hover {
+  background-color: #444;
 }
 
-.content {
-  background-color: #f9f9f9;
-  padding: 20px;
+#main {
+  transition: margin-left .5s;
+  /* padding: 16px; */
+}
+
+
+.headerSuperior{
+  height: 60px;
+  display: flex;
+  background-color: #111;
+  color: white;
+}
+
+.right-side{
+  padding: 18px 15px;
+  margin:0 auto;
+  font-size: 26px;
+}
+
+
+
+
+
+
+
+
+/* 
+para el dropdown-------------------
+*/
+
+
+.sidenav {
+  height: 100%;
+  width: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  transition: 0.9s;
+}
+
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  color: #f1f1f1;
+  margin-left: 8px;
+}
+
+/* Main content */
+.main {
+  margin-left: 200px; /* Same as the width of the sidenav */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+/* Add an active class to the active dropdown button */
+.active {
+  background-color: green;
+  color: white;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  background-color: #262626;
+  padding-left: 8px;
+}
+
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+/* Fin dropdown */
+
+
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
 }
