--- a/Estilos/main.css
+++ b/Estilos/main.css
@@ -2,6 +2,7 @@
   margin: 0;
 }
 
+
 body {
   font-family: "Lato", sans-serif;
   height: 100%;
@@ -41,6 +42,10 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#aeceee",endCo
   margin-left: 8px;
 }
 
+/* .sidebar a:visited{
+  color: #818181;
+} */
+
 .sidebar .closebtn {
   position: absolute;
   top: 0;
@@ -57,6 +62,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#aeceee",endCo
   padding: 10px 15px;
   border: none;
   height: 100%;
+  transition: 0.5s;
 }
 
 .dropdown-container{
@@ -169,14 +175,14 @@ para el dropdown-------------------
   min-height: max-content;
   height: 80%;
   /* max-height: 90%; */
-  margin-top:20px;
+  margin-top:5%;
 }
 
 .Principal{
 
   box-shadow: 0px 0px 24px 0px rgba(0,0,0,0.18);
   background-color: rgb(255, 255, 255);
-  border-radius: 2%;
+  border-radius: 10px;
   padding: 2%;
   width:60%;
   margin: 0 auto;
@@ -221,6 +227,8 @@ para el dropdown-------------------
 }
 
 
+
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
@@ -235,6 +243,9 @@ para el dropdown-------------------
 }
 
 @media(max-width:799px){
+  /* general botones */
+
+  /*  */
 
   .Principal{
     width: 95%;
